--- a/Hangfire/Web.config
+++ b/Hangfire/Web.config
@@ -4,7 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -15,9 +14,9 @@
     <add name="HangfireStorageDbContext" connectionString="Data Source=SLATEDEV-PC\SQLEXPRESS;Initial Catalog=hangfire-storage;Integrated Security=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
     <add name="ServiceBus" connectionString="Endpoint=sb://slatedev-pc/ServiceBusDefaultNamespace;StsEndpoint=https://slatedev-pc:9355/ServiceBusDefaultNamespace;RuntimePort=9354;ManagementPort=9355" />
   </connectionStrings>
-  <!-- <appSettings>
-   <add key="owin:AutomaticAppStartup " value="false" />
-  </appSettings>-->
+  <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
+  </appSettings>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -43,6 +42,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
