--- a/Hangfire/packages.config
+++ b/Hangfire/packages.config
@@ -3,11 +3,18 @@
   <package id="Common.Logging" version="3.3.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="HangFire" version="1.5.0" targetFramework="net45" />
+  <package id="Hangfire.Core" version="1.5.0" targetFramework="net45" />
+  <package id="Hangfire.SqlServer" version="1.5.0" targetFramework="net45" />
+  <package id="HangFire.SqlServer.MSMQ" version="1.5.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net45" />
 </packages>
