--- a/Hangfire.Service/packages.config
+++ b/Hangfire.Service/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Hangfire.Core" version="1.5.0" targetFramework="net45" />
+  <package id="Hangfire.SqlServer" version="1.5.0" targetFramework="net45" />
   <package id="logentries.core" version="2.6.10" targetFramework="net45" />
   <package id="logentries.nlog" version="2.4.9" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" />
