--- a/Hangfire/Hangfire.Web.Api.csproj
+++ b/Hangfire/Hangfire.Web.Api.csproj
@@ -11,7 +11,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hangfire.Web.Api</RootNamespace>
+    <RootNamespace>HangfireApplication.Web.Api</RootNamespace>
     <AssemblyName>Hangfire.Web.Api</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
@@ -114,17 +114,19 @@
     <Compile Include="App_Start\RoutesConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="DtoModel\Common\DtoConverter.cs" />
     <Compile Include="DtoModel\Common\DtoModelOutgoing.cs" />
     <Compile Include="Exceptions\DtoModelIncomingValidationException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hangfire.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestFilter\AuthorizationFilter.cs" />
     <Compile Include="RequestFilter\ExceptionActionFilter.cs" />
     <Compile Include="RequestFilter\ValidationActionFilter.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="UnityResolver.cs" />
     <Compile Include="WebApiConst.cs" />
     <Compile Include="WebRequestDependencyInjector.cs" />
